RO-MAN 2022 commit.

--- a/docs/latex/encryption_8py.tex
+++ b/docs/latex/encryption_8py.tex
@@ -4,16 +4,16 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespaceencryption}{encryption}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Contains all functions related to AES encryption for the Talk to Kotaro web platform. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 def \mbox{\hyperlink{namespaceencryption_a03ab4960309a6a18c6c18bceaa4b0929}{decrypt}} (filename, key)
-\item 
+\begin{DoxyCompactList}\small\item\em decrypts the file \end{DoxyCompactList}\item 
 def \mbox{\hyperlink{namespaceencryption_a9d5247261e5bc68c6971f6dc40fdadf6}{encrypt}} (filename, key)
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em encrypts a file using AES256. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\hyperlink{namespaceencryption_a795d1912e73739f7fd4b3830a7f105b1}{current\+\_\+dir}} = os.\+getcwd()
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em current directory where the script is being executed. \end{DoxyCompactList}\end{DoxyCompactItemize}
