--- a/docs/latex/mailer_8py.tex
+++ b/docs/latex/mailer_8py.tex
@@ -4,7 +4,7 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespacemailer}{mailer}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Contains all the necessary methods and variables for sending emails. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
