--- a/docs/latex/namespacemailer.tex
+++ b/docs/latex/namespacemailer.tex
@@ -1,5 +1,10 @@
 \hypertarget{namespacemailer}{}\doxysection{mailer Namespace Reference}
 \label{namespacemailer}\index{mailer@{mailer}}
+
+
+Contains all the necessary methods and variables for sending emails.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -19,6 +24,9 @@ string \mbox{\hyperlink{namespacemailer_ae0d0c2f3f253d855eb96b6b5fcba69d1}{sent\
 list \mbox{\hyperlink{namespacemailer_a366056bcea407c393bcc0cc17d637ac7}{to}} = \mbox{[}\mbox{\hyperlink{namespacemailer_af38030c9b21f7ab9bb0318f5ca0e11ad}{gmail\+\_\+user}}\mbox{]}
 \begin{DoxyCompactList}\small\item\em list of addresses to which the email will be sente; in this case, only you; list of str. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Contains all the necessary methods and variables for sending emails. 
 
 \doxysubsection{Function Documentation}
 \mbox{\Hypertarget{namespacemailer_aab38b446ad04cec7ea71a0b29b077851}\label{namespacemailer_aab38b446ad04cec7ea71a0b29b077851}} 
