--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -171,6 +171,8 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Talk to Kotaro\+: a novel open-\/source web-\/based crowdsourcing platform for human-\/robot interaction experiments}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{README}
 \label{md_README}
 \Hypertarget{md_README}
@@ -186,6 +188,7 @@
 \input{namespaceforbidden__phonemes}
 \input{namespacelocker}
 \input{namespacemailer}
+\input{namespacetabler}
 \input{namespaceutils}
 \chapter{File Documentation}
 \input{EmotionEstimator_8py}
@@ -195,6 +198,7 @@
 \input{locker_8py}
 \input{mailer_8py}
 \input{README_8md}
+\input{tabler_8py}
 \input{utils_8py}
 %--- End generated contents ---
 
