--- a/docs/latex/utils_8py.tex
+++ b/docs/latex/utils_8py.tex
@@ -4,15 +4,15 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespaceutils}{utils}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Contains helper functions which do not fit in the other scripts. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 def \mbox{\hyperlink{namespaceutils_a64f7261fc1e2a812ba24ebbe7d08d80a}{base64\+\_\+to\+\_\+pil\+\_\+image}} (base64\+\_\+img)
-\item 
+\begin{DoxyCompactList}\small\item\em Converts the image from a base64 img to PIL format. \end{DoxyCompactList}\item 
 def \mbox{\hyperlink{namespaceutils_adedbb8d65f031396fed9dda5ad19b2c8}{data\+\_\+uri\+\_\+to\+\_\+cv2\+\_\+img}} (uri)
-\item 
+\begin{DoxyCompactList}\small\item\em Converts the image from the browser side to Open\+CV2 format (np.\+array). \end{DoxyCompactList}\item 
 def \mbox{\hyperlink{namespaceutils_a9178891741e1d28b9c7622cecdad5a4e}{gibberish}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Generates Kotaro\textquotesingle{}s semantic free speech contents. \end{DoxyCompactList}\item 
 def \mbox{\hyperlink{namespaceutils_a18b247ce53b90aefb4bb70ea91e9a7b9}{pil\+\_\+image\+\_\+to\+\_\+base64}} (pil\+\_\+image)
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Converts the image from the PIL library format to Open\+CV2 format (np.\+array). \end{DoxyCompactList}\end{DoxyCompactItemize}
