--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -6,5 +6,6 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{forbidden__phonemes_8py}{forbidden\+\_\+phonemes.\+py}} }{\pageref{forbidden__phonemes_8py}}{}
 \item\contentsline{section}{\mbox{\hyperlink{locker_8py}{locker.\+py}} }{\pageref{locker_8py}}{}
 \item\contentsline{section}{\mbox{\hyperlink{mailer_8py}{mailer.\+py}} }{\pageref{mailer_8py}}{}
+\item\contentsline{section}{\mbox{\hyperlink{tabler_8py}{tabler.\+py}} }{\pageref{tabler_8py}}{}
 \item\contentsline{section}{\mbox{\hyperlink{utils_8py}{utils.\+py}} }{\pageref{utils_8py}}{}
 \end{DoxyCompactList}
