RO-MAN 2022 commit.

--- a/docs/latex/flaskapp_8py.tex
+++ b/docs/latex/flaskapp_8py.tex
@@ -4,7 +4,7 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespaceflaskapp}{flaskapp}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Main script of Talk to Kotaro, containing the Flask app which serves the webpages for the browser side and executes every back-\/end function. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
