--- a/docs/latex/locker_8py.tex
+++ b/docs/latex/locker_8py.tex
@@ -4,7 +4,7 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespacelocker}{locker}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em script which contains all functions regarding login ID and password verification and insertion into the database. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
