--- a/docs/latex/namespaceflaskapp.tex
+++ b/docs/latex/namespaceflaskapp.tex
@@ -1,5 +1,10 @@
 \hypertarget{namespaceflaskapp}{}\doxysection{flaskapp Namespace Reference}
 \label{namespaceflaskapp}\index{flaskapp@{flaskapp}}
+
+
+Main script of Talk to Kotaro, containing the Flask app which serves the webpages for the browser side and executes every back-\/end function.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -67,6 +72,9 @@ string \mbox{\hyperlink{namespaceflaskapp_a18472a311d5a16b50e72ad812261c5cf}{SES
 string \mbox{\hyperlink{namespaceflaskapp_a5102c5e53da9e433c0e860e0533e860f}{video\+Loc}} = \char`\"{}./memory/video/\char`\"{}
 \begin{DoxyCompactList}\small\item\em Location where the video of the facial expression of volunteers are stored. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Main script of Talk to Kotaro, containing the Flask app which serves the webpages for the browser side and executes every back-\/end function. 
 
 \doxysubsection{Function Documentation}
 \mbox{\Hypertarget{namespaceflaskapp_a4e2b61a6cd02fefe5debaa99c77b76fc}\label{namespaceflaskapp_a4e2b61a6cd02fefe5debaa99c77b76fc}} 
