--- a/docs/latex/namespacelocker.tex
+++ b/docs/latex/namespacelocker.tex
@@ -1,5 +1,10 @@
 \hypertarget{namespacelocker}{}\doxysection{locker Namespace Reference}
 \label{namespacelocker}\index{locker@{locker}}
+
+
+script which contains all functions regarding login ID and password verification and insertion into the database.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -10,6 +15,9 @@ def \mbox{\hyperlink{namespacelocker_a461dd43ed7b4b8ea9a7d37d89c5b9bdd}{IDexists
 def \mbox{\hyperlink{namespacelocker_a44bee78b0d9d56a91ddc3ed7ef10b6ee}{login\+Check}} (ID, password)
 \begin{DoxyCompactList}\small\item\em Performs the login credentials verification for a given ID and password pair. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+script which contains all functions regarding login ID and password verification and insertion into the database. 
 
 \doxysubsection{Function Documentation}
 \mbox{\Hypertarget{namespacelocker_a646db9d30802d408b10ef724f8f39c45}\label{namespacelocker_a646db9d30802d408b10ef724f8f39c45}} 
