--- a/docs/latex/namespaces.tex
+++ b/docs/latex/namespaces.tex
@@ -1,10 +1,8 @@
 \doxysection{Packages}
 Here are the packages with brief descriptions (if available)\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{namespaceEmotionEstimator}{Emotion\+Estimator}} }{\pageref{namespaceEmotionEstimator}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceencryption}{encryption}} \\*Contains all functions related to AES encryption for the Talk to Kotaro web platform }{\pageref{namespaceencryption}}{}
-\item\contentsline{section}{\mbox{\hyperlink{namespaceflaskapp}{flaskapp}} }{\pageref{namespaceflaskapp}}{}
-\item\contentsline{section}{\mbox{\hyperlink{namespaceforbidden__phonemes}{forbidden\+\_\+phonemes}} }{\pageref{namespaceforbidden__phonemes}}{}
-\item\contentsline{section}{\mbox{\hyperlink{namespacelocker}{locker}} }{\pageref{namespacelocker}}{}
+\item\contentsline{section}{\mbox{\hyperlink{namespaceflaskapp}{flaskapp}} \\*Main script of Talk to Kotaro, containing the Flask app which serves the webpages for the browser side and executes every back-\/end function }{\pageref{namespaceflaskapp}}{}
+\item\contentsline{section}{\mbox{\hyperlink{namespacelocker}{locker}} \\*Script which contains all functions regarding login ID and password verification and insertion into the database }{\pageref{namespacelocker}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespacemailer}{mailer}} \\*Contains all the necessary methods and variables for sending emails }{\pageref{namespacemailer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespacetabler}{tabler}} \\*Contains the function tabler, which is responsible for creating a new empty SQLite database with all correct tables and fields }{\pageref{namespacetabler}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceutils}{utils}} \\*Contains helper functions which do not fit in the other scripts }{\pageref{namespaceutils}}{}
